--- a/css/style2.css
+++ b/css/style2.css
@@ -24,7 +24,7 @@ body{
 }
 
 .conDer{
-    background-color: #fff;
+    background-color: #000;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     justify-content: center;
