--- a/css/style2.css
+++ b/css/style2.css
@@ -8,7 +8,6 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 #conPrincipal{
@@ -74,6 +73,11 @@ body{
     background-size: cover;
     background-position: center;
     border-radius: 20px 0px 0px 20px;
+}
+
+.popup-clase{
+    border-radius: 0;
+    background-color: #fe6b68;
 }
 
 /* .conImagen{
