--- a/css/style2.css
+++ b/css/style2.css
@@ -11,30 +11,30 @@ body{
 }
 
 #conPrincipal{
-    width: 120vh;
-    height: 80vh;
+    width: 40vh;
+    height: 60vh;
+    background: rgba(255,255,255,.05);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
-    border-radius: 20px;
+    justify-content: center;
+    align-items: center;
+    /* background-image: url(../images/vackground-com-0F2pC8_DwvM-unsplash.jpg);
+    background-size: cover; */
+    backdrop-filter: blur(20px);
+    border-radius: 50px;
+    box-shadow: 0 25px 50px rgba(0,0,0,0.40);
 }
+
+#imgInicio{
+    width: 50%;
+}
+
+
 
 #conInter{
     height: 100%;
     width: 50%;
 }
-
-.conDer{
-    background-color: #fff;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-image: url(../images/vackground-com-0F2pC8_DwvM-unsplash.jpg);
-    background-size: cover;
-    -webkit-backdrop-filter: blur(90px);
-    backdrop-filter: blur(20px);
-    border-radius: 0px 20px 20px 0px;
-}
-
 
 .conContenidos{
     text-align: center;
@@ -66,19 +66,14 @@ body{
     color: #fff;
 }
 
-.conIzq{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-position: center;
-    border-radius: 20px 0px 0px 20px;
+.tituloVentana{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.popup-clase{
-    border-radius: 0;
-    background-color: #fe6b68;
+.txtBtnVen{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 
 /* .conImagen{
     border: 2px solid;
