--- a/css/style2.css
+++ b/css/style2.css
@@ -23,6 +23,7 @@ body{
     backdrop-filter: blur(20px);
     border-radius: 50px;
     box-shadow: 0 25px 50px rgba(0,0,0,0.40);
+    flex-direction: column;
 }
 
 #imgInicio{
