--- a/css/style2.css
+++ b/css/style2.css
@@ -8,7 +8,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background:linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);;
+    background:linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
     /* background-image: url(../images/wave.svg);
     background-position: center;
     background-size: cover; */
