--- a/css/style_sis.css
+++ b/css/style_sis.css
@@ -11,7 +11,7 @@ body{
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     /* background:linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);; */
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
@@ -28,6 +28,7 @@ button{
     display: flex;
     gap: 20px;
     width: auto;
+    margin-top: 30vh;
 }
 
 .conEnviar{
