--- a/css/style2.css
+++ b/css/style2.css
@@ -111,24 +111,24 @@ button {
     gap: 0.6em;
     font-weight: bold;
     margin: auto;
-  }
+}
   
-  button .arrow-wrapper {
+button .arrow-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
   
-  button .arrow {
+button .arrow {
     margin-top: 1px;
     width: var(--arrow-width);
     background: var(--primary-color);
     height: var(--arrow-stroke);
     position: relative;
     transition: 0.2s;
-  }
+}
   
-  button .arrow::before {
+button .arrow::before {
     content: "";
     box-sizing: border-box;
     position: absolute;
@@ -140,17 +140,21 @@ button {
     transition: 0.2s;
     padding: 3px;
     transform: rotate(-45deg);
-  }
+}
   
-  button:hover {
+button:hover {
     background-color: var(--hover-color);
     cursor: pointer;
-  }
+}
   
-  button:hover .arrow {
+button:hover .arrow {
     background: var(--secondary-color);
-  }
+}
   
-  button:hover .arrow:before {
+button:hover .arrow:before {
     right: 0;
-  }
+}
+
+.c-titulo{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
