--- a/css/estadisticas.css
+++ b/css/estadisticas.css
@@ -4,6 +4,14 @@
     padding: 0;
 }
 
+:root {
+    --accent-color: #fff;
+    --gradient-color: #FBFBFB;
+    --col1:#a1c4fd;
+    --col2:#c2e9fb;
+
+}
+
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -15,7 +23,8 @@ body{
     flex-wrap: wrap;
     position: relative;
     padding: 20px;
-    background-color: #645bff;
+    background: linear-gradient(#a1c4fd,#c2e9fb);
+    z-index: -999;
 }
 
 .encabezado h1{
@@ -50,5 +59,157 @@ body{
 #btnVotaciones:hover{
     cursor: pointer;
 }
+
+  body{
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .sidebar{
+    position: fixed;
+    width: 240px;
+    left: -240px;
+    height: 10%;
+    background-color: #fff;
+    transition: all .5s ease;
+  }
+  .sidebar header{
+    font-size: 28px;
+    color: #353535;
+    line-height: 70px;
+    text-align: center;
+    background-color: #fff;
+    user-select: none;
+    font-family: 'Lato', sans-serif;
+  }
+
+  .sidebar a{
+    display: block;
+    height: 65px;
+    width: 100%;
+    color: #353535;
+    line-height: 65px;
+    padding-left: 30px;
+    box-sizing: border-box;
+    border-left: 5px solid transparent;
+    font-family: 'Lato', sans-serif;
+    transition: all .5s ease;
+  }
+  a.active,a:hover{
+    border-left: 5px solid var(--accent-color);
+    color: #fff;
+     background: var(--col1);
+  }
+  .sidebar a i{
+    font-size: 23px;
+    margin-right: 16px;
+  }
+  .sidebar a span{
+    letter-spacing: 1px;
+    text-transform: uppercase;
+  }
+  #check{
+    display: none;
+  }
+  label #btn,label #cancel{
+    position: absolute;
+    left: 5px;
+    cursor: pointer;
+    color: #fff;
+    border-radius: 5px;
+    margin: 15px 30px;
+    font-size: 29px;
+    background-color: #000;
+    height: 45px;
+    width: 45px;
+    text-align: center;
+    text-shadow: 2px 2px 3px rgba(255,255,255,0.5);
+    line-height: 45px;
+    transition: all .5s ease;
+  }
+  label #cancel{
+    opacity: 0;
+    visibility: hidden;
+  }
+  #check:checked ~ .sidebar{
+    left: 0;
+  }
+  #check:checked ~ label #btn{
+    margin-left: 245px;
+    opacity: 0;
+    visibility: hidden;
+  }
+  #check:checked ~ label #cancel{
+    margin-left: 245px;
+    opacity: 1;
+    visibility: visible;
+  }
+  @media(max-width : 860px){
+    .sidebar{
+      height: auto;
+      width: 70px;
+      left: 0;
+      margin: 100px 0;
+    }
+    header,#btn,#cancel{
+      display: none;
+    }
+    span{
+      position: absolute;
+      margin-left: 23px;
+      opacity: 0;
+      visibility: hidden;
+    }
+    .sidebar a{
+      height: 60px;
+    }
+    .sidebar a i{
+      margin-left: -10px;
+    }
+    a:hover {
+      width: 200px;
+      background: inherit;
+    }
+    .sidebar a:hover span{
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+  
+  .sidebar > a.active,.sidebar > a:hover:nth-child(even) {
+    --accent-color: #52d6f4;
+    --gradient-color: #c1b1f7;
+  }
+  .sidebar a.active,.sidebar > a:hover:nth-child(odd) {
+    --accent-color: #c1b1f7;
+    --gradient-color: #A890FE;
+  }
+  
+  
+  .frame {
+    width: 50%;
+    height: 30%;
+    margin: auto;
+    text-align: center;
+  }
+  
+  h2 {
+    position: relative;
+    text-align: center;
+    color: #353535;
+    font-size: 60px;
+    font-family: 'Lato', sans-serif;
+    margin: 0;
+    color: #a759f5;
+  }
+  
+  p {
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    text-align: center;
+    font-size: 30px;
+    color: #d6adff;
+    margin: 0;
+  }
 
 
