--- a/css/estadisticas.css
+++ b/css/estadisticas.css
@@ -16,7 +16,7 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.encabezado{
+.navbar{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -44,12 +44,12 @@ body{
   }
 }
 
-.encabezado h1{
+.navbar h1{
     flex: 1;
     text-align: center;
 }
 
-.encabezado a{
+.navbar a{
     text-decoration: none;
 }
 
@@ -82,7 +82,7 @@ body{
     height: 100vh;
   }
 
-  .sidebar{
+  /* .sidebar{
     position: fixed;
     width: 240px;
     left: -240px;
@@ -208,9 +208,9 @@ body{
     height: 30%;
     margin: auto;
     text-align: center;
-  }
+  } */
   
-  h2 {
+h2 {
     position: relative;
     text-align: center;
     color: #353535;
@@ -218,16 +218,20 @@ body{
     font-family: 'Lato', sans-serif;
     margin: 0;
     color: #a759f5;
-  }
+}
   
-  p {
+p {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     text-align: center;
     font-size: 30px;
     color: #d6adff;
     margin: 0;
-  }
+}
+
+.btn-custom{
+  padding: 10px;
+}
 
 
 
