--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 #conPrincipal{
     display: flex;
     justify-content: space-evenly;
-    margin-top: 200px;
+    margin-top: 50px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     flex-wrap: wrap;
     gap: 20px;
@@ -44,21 +44,6 @@
     box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
 }
 
-@keyframes mov-back{
-    0%{
-        background-position: 0% 50%;
-    }
-    30%{
-        background-position: 100% 70%;
-    }
-    50%{
-        background-position: 100% 50%;
-    }
-    100%{
-        background-position: 0% 50%;
-    }
-}
-
 .navbar{
     background: linear-gradient(-120deg,#a1c4fd,#c2e9fb);
     padding: 20px;
@@ -71,8 +56,6 @@ a{
 .con-titulo{
     text-align: left;
     width: 80%;
-    
-
 }
 
 .reaccion{
@@ -116,4 +99,16 @@ a{
 
 .no-me-gusta{
     color: #fff;
+}
+
+.daEstadistica{
+    border: 1px solid #d2d2d2;
+    margin: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.numVotos{
+    color: rgb(36, 113, 201);
+    font-size: 3rem;
 }
