--- a/css/style_sis.css
+++ b/css/style_sis.css
@@ -16,6 +16,7 @@ body{
     /* background:linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);; */
     background: #6EACDA;
     transition: all 0.3s ease;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 button{
@@ -166,3 +167,56 @@ form{
         margin-top: 50px;
     }
 }
+
+.creditos {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+      display: flex;
+    justify-content: center;
+      width: 450px;
+      height: 50px;
+      font-size: 20px;
+      line-height: 40px;
+      margin: -15px;
+      overflow: hidden;
+  }
+  
+  .c-fijo {
+      list-style: none;
+      padding-left: 10px;
+      animation: cambiar2 9s infinite;
+  }
+  
+  .c-fijo, .texto-creditos{
+      margin: 0;
+  }
+  
+  .texto-creditos{
+    color: #111;
+    font-size: 20px;
+  }
+  
+  .c-cambio{
+    color: #132ce7;
+  }
+  
+  @keyframes cambiar2 {
+      
+      0%{ margin-top: 0;}
+      10%{ margin-top: 0;}
+  
+    20%{ margin-top: -40px;}
+      30%{ margin-top: -40px;}
+    
+      40% {margin-top: -80px;}
+      50% {margin-top: -80px;}
+      
+      60% {margin-top: -120px;}
+      70% {margin-top: -120px;}
+      
+      80% {margin-top: -80px;}
+      90% {margin-top: -40px;}
+      
+      100% {margin-top: 0;}
+  }
